# stellcodex

./: .env.example  .gitignore  AI_DRIVE_OFFLOAD_REPORT.md  AI_ENV_INSTALL_REPORT.md  AI_ENV_OPERATIONS.md  AI_ENV_SYSTEM_REQUIREMENTS.md  AI_NEXT_PHASE_PLAN.md  AI_SELF_LEARNING_CHANGESET.md  AI_SELF_LEARNING_FINAL_REPORT.md  AI_SELF_LEARNING_HANDOFF_SUMMARY.md  AI_SELF_LEARNING_LOOP_FINAL_REPORT.md  AI_SELF_LEARNING_REPORT.md  ASYNC_DRIVE_SNAPSHOT_FINAL_REPORT.md  ASYNC_SNAPSHOT_CLEANUP_LOG.md  ASYNC_SNAPSHOT_MODEL.md  ASYNC_SNAPSHOT_PERFORMANCE_REPORT.md  ASYNC_SNAPSHOT_VALIDATION.md  CANONICAL_REPO.md  CHANGELOG.md  CLAUDE.md  FINAL_EVIDENCE.md  FINAL_REPORT.md  FINAL_STELLAI_TOOL_ECOSYSTEM_VERDICT.md  OPERATOR_RULES.md  PHASE2_EVENT_MAP.md  PHASE2_GAP_REPORT.md  PHASE2_IMPLEMENTATION_LOG.md  PHASE2_PROOF.md  PHASE2_SCHEMA_CHANGES.md  PRE_AI_INSTALL_DISK_STATE.txt  PRE_AI_INSTALL_RUNTIME_STATE.json  README.md  README_MASTER.md  RECOVERY_BASELINE.md  REPORT.md  REQUEST_PATH_REFACTOR_LOG.md  SECURITY_FIX_ALLOWED_TOOLS_REPORT.md  SELF_LEARNING_PROOF_V2.md  SNAPSHOT_DB_MODEL.md  SNAPSHOT_HASH.txt  (+34 more)
AI/: .env.example  requirements.in  run_stell_ai_daemon.sh
archive_legacy/: README.md
backend/: Dockerfile  Dockerfile.backend  Dockerfile.worker  alembic.ini  requirements.txt
ci/: contract_matrix.sh
config/: render_presets.json  render_presets.schema.json
docker/: .env.example  docker-compose.prod.yml
docs/: CANONICAL_REPO_LAYOUT.md  CANONICAL_STORAGE_RULES.md  DEPLOY_HARDENING_EVIDENCE.md  (+8 more)
stell-ai/: src  (+1 more)
stellcodex_v7/backend/tools/occt-convert/: CMakeLists.txt
(+1848 files in other folders)
